# my_bevy_transform_gizmo

./: Cargo.toml
examples/: minimal.rs
src/: lib.rs  normalization.rs  picking.rs
src/mesh/: mod.rs
