[package]
name = "bevy_transform_gizmo"
version = "0.5.0"
authors = [
    "Aevyrie Roessler <aevyrie@gmail.com>",
    "Foresight Mining Software Corporation",
]
edition = "2021"
description = "A 3D transform gizmo for Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForesightMiningSoftwareCorporation/bevy_transform_gizmo"
documentation = "https://docs.rs/bevy_transform_gizmo"

[dependencies]
bevy = { version = "0.10.0" }
bevy_mod_picking = "0.12"
bevy_mod_raycast = "0.8"

[dependencies.naga]
features = ["wgsl-in", "spv-out", "wgsl-out"]
version = "0.10.0"

#[dev-dependencies]
#bevy = { version = "0.9.0", default-features = false, features = [
#    "bevy_winit",
#    "x11",
#] }
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = [
#    "bevy_winit",
#    "x11",
#] }
